Fixes #219 - Horizontal scroll bar seen in browser window

--- a/src/v1.1/pages/PressKit/Downloads/DocDownload/docDownload.sass
+++ b/src/v1.1/pages/PressKit/Downloads/DocDownload/docDownload.sass
@@ -33,13 +33,14 @@
 // Small
 +render-to($media-s)
   .docDownload
+    width: 550px
     margin-bottom: 104px
 
 
 // XSmall
 +render-to($media-xs)
   .docDownload
-    width: 665px
+    width: 560px
     margin-bottom: 80px
 
 // XXSmall
